BugFixed: *wrong saving job setting in dashboard  *not showing A4P job in preview at editor *not saving title which is entered in template page

--- a/public/clndr/full-clndr.less
+++ b/public/clndr/full-clndr.less
@@ -4,7 +4,8 @@
   font-weight: 700;
   -moz-box-shadow: 4px 4px 0 darken(@dark-gray, 5%);
   -webkit-box-shadow: 4px 4px 0 darken(@dark-gray, 5%);
-  box-shadow: 4px 4px 0 darken(@dark-gray, 5%);
+  box-shadow: 1px 1px 3px #BFBFBF;
+  border-left: 3px solid green;
 
   .clndr-controls {
     .month {
